---
title: "Component: Build Manager"
description: Internal logic for validating and building the documentation graph.
---
classDiagram
    class BuildManager {
        +build()
        +serve()
        -validateProjectGraph(assetsDir)
        -processCategory()
        -generateHub()
    }

    class ProjectGraph {
        +adjacencyList
        +connectedNodes
        +validateOrphans()
    }

    class MermaidParser {
        +PuppeteerBrowser
        +renderSVG()
    }

    BuildManager --> ProjectGraph : Validates Structure
    BuildManager --> MermaidParser : Renders Diagrams

    click BuildManager href "../sequences/build-process.mermaid" "View Build Sequence"